@@ -44,201 +44,201 @@ import org.eclipse.collections.impl.tuple.Tuples;
 
 public class AntlrProjectionReferenceProperty extends AntlrProjectionParent implements AntlrProjectionChild {
 
-    @Nonnull
-    private final AntlrProjectionParent antlrProjectionParent;
+	@Nonnull
+	private final AntlrProjectionParent antlrProjectionParent;
 
-    @Nonnull
-    private final AntlrClassifier classifierState;
+	@Nonnull
+	private final AntlrClassifier classifierState;
 
-    @Nonnull
-    private final AntlrReferenceProperty<?> referenceProperty;
+	@Nonnull
+	private final AntlrReferenceProperty<?> referenceProperty;
 
-    private ProjectionReferencePropertyBuilder projectionReferencePropertyBuilder;
+	private ProjectionReferencePropertyBuilder projectionReferencePropertyBuilder;
 
-    public AntlrProjectionReferenceProperty(
-        @Nonnull ProjectionReferencePropertyContext elementContext,
-        @Nonnull Optional<CompilationUnit> compilationUnit,
-        int ordinal,
-        @Nonnull IdentifierContext nameContext,
-        @Nonnull AntlrClassifier classifier,
-        @Nonnull AntlrProjectionParent antlrProjectionParent,
-        @Nonnull AntlrClassifier classifierState,
-        @Nonnull AntlrReferenceProperty<?> referenceProperty
-    ) {
-        super(elementContext, compilationUnit, ordinal, nameContext, classifier);
-        this.antlrProjectionParent = Objects.requireNonNull(antlrProjectionParent);
-        this.classifierState = Objects.requireNonNull(classifierState);
-        this.referenceProperty = Objects.requireNonNull(referenceProperty);
-    }
+	public AntlrProjectionReferenceProperty(
+		@Nonnull ProjectionReferencePropertyContext elementContext,
+		@Nonnull Optional<CompilationUnit> compilationUnit,
+		int ordinal,
+		@Nonnull IdentifierContext nameContext,
+		@Nonnull AntlrClassifier classifier,
+		@Nonnull AntlrProjectionParent antlrProjectionParent,
+		@Nonnull AntlrClassifier classifierState,
+		@Nonnull AntlrReferenceProperty<?> referenceProperty
+	) {
+		super(elementContext, compilationUnit, ordinal, nameContext, classifier);
+		this.antlrProjectionParent = Objects.requireNonNull(antlrProjectionParent);
+		this.classifierState = Objects.requireNonNull(classifierState);
+		this.referenceProperty = Objects.requireNonNull(referenceProperty);
+	}
 
-    @Nonnull
-    public AntlrReferenceProperty<?> getProperty() {
-        return this.referenceProperty;
-    }
+	@Nonnull
+	public AntlrReferenceProperty<?> getProperty() {
+		return this.referenceProperty;
+	}
 
-    @Override
-    public boolean isContext() {
-        return true;
-    }
+	@Override
+	public boolean isContext() {
+		return true;
+	}
 
-    @Override
-    public Pair<Token, Token> getContextBefore() {
-        return Tuples.pair(this.getElementContext().getStart(), this.getElementContext().projectionBlock().getStart());
-    }
+	@Override
+	public Pair<Token, Token> getContextBefore() {
+		return Tuples.pair(this.getElementContext().getStart(), this.getElementContext().projectionBlock().getStart());
+	}
 
-    @Override
-    public Pair<Token, Token> getContextAfter() {
-        return Tuples.pair(
-            this.getElementContext().projectionBlock().getStop(),
-            this.getElementContext().PUNCTUATION_COMMA().getSymbol()
-        );
-    }
+	@Override
+	public Pair<Token, Token> getContextAfter() {
+		return Tuples.pair(
+			this.getElementContext().projectionBlock().getStop(),
+			this.getElementContext().PUNCTUATION_COMMA().getSymbol()
+		);
+	}
 
-    @Nonnull
-    @Override
-    public ProjectionReferencePropertyContext getElementContext() {
-        return (ProjectionReferencePropertyContext) super.getElementContext();
-    }
+	@Nonnull
+	@Override
+	public ProjectionReferencePropertyContext getElementContext() {
+		return (ProjectionReferencePropertyContext) super.getElementContext();
+	}
 
-    @Nonnull
-    @Override
-    public ProjectionReferencePropertyBuilder build() {
-        if (this.projectionReferencePropertyBuilder != null) {
-            throw new IllegalStateException();
-        }
+	@Nonnull
+	@Override
+	public ProjectionReferencePropertyBuilder build() {
+		if (this.projectionReferencePropertyBuilder != null) {
+			throw new IllegalStateException();
+		}
 
-        this.projectionReferencePropertyBuilder = new ProjectionReferencePropertyBuilder(
-            (ProjectionReferencePropertyContext) this.elementContext,
-            this.getMacroElementBuilder(),
-            this.getSourceCodeBuilder(),
-            this.ordinal,
-            this.getNameContext(),
-            this.antlrProjectionParent.getElementBuilder(),
-            this.classifierState.getElementBuilder(),
-            this.referenceProperty.getElementBuilder()
-        );
+		this.projectionReferencePropertyBuilder = new ProjectionReferencePropertyBuilder(
+			(ProjectionReferencePropertyContext) this.elementContext,
+			this.getMacroElementBuilder(),
+			this.getSourceCodeBuilder(),
+			this.ordinal,
+			this.getNameContext(),
+			this.antlrProjectionParent.getElementBuilder(),
+			this.classifierState.getElementBuilder(),
+			this.referenceProperty.getElementBuilder()
+		);
 
-        ImmutableList<ProjectionChildBuilder> projectionMemberBuilders = this.children.collect(
-            AntlrProjectionChild::build
-        ).toImmutable();
+		ImmutableList<ProjectionChildBuilder> projectionMemberBuilders = this.children.collect(
+			AntlrProjectionChild::build
+		).toImmutable();
 
-        this.projectionReferencePropertyBuilder.setChildBuilders(projectionMemberBuilders);
-        return this.projectionReferencePropertyBuilder;
-    }
+		this.projectionReferencePropertyBuilder.setChildBuilders(projectionMemberBuilders);
+		return this.projectionReferencePropertyBuilder;
+	}
 
-    @Override
-    public void build2() {
-        this.children.forEach(AntlrProjectionElement::build2);
-    }
+	@Override
+	public void build2() {
+		this.children.forEach(AntlrProjectionElement::build2);
+	}
 
-    @Override
-    public void visit(@Nonnull AntlrProjectionVisitor visitor) {
-        visitor.visitReferenceProperty(this);
-    }
+	@Override
+	public void visit(@Nonnull AntlrProjectionVisitor visitor) {
+		visitor.visitReferenceProperty(this);
+	}
 
-    @Nonnull
-    @Override
-    public AbstractProjectionParentBuilder<? extends AbstractProjectionParent> getElementBuilder() {
-        return Objects.requireNonNull(this.projectionReferencePropertyBuilder);
-    }
+	@Nonnull
+	@Override
+	public AbstractProjectionParentBuilder<? extends AbstractProjectionParent> getElementBuilder() {
+		return Objects.requireNonNull(this.projectionReferencePropertyBuilder);
+	}
 
-    @Nonnull
-    @Override
-    public AntlrProjectionParent getParent() {
-        return this.antlrProjectionParent;
-    }
+	@Nonnull
+	@Override
+	public AntlrProjectionParent getParent() {
+		return this.antlrProjectionParent;
+	}
 
-    // <editor-fold desc="Report Compiler Errors">
-    @Override
-    public void reportDuplicateMemberName(@Nonnull CompilerAnnotationHolder compilerAnnotationHolder) {
-        String message = String.format("Duplicate member: '%s'.", this.getName());
-        compilerAnnotationHolder.add("ERR_DUP_PRJ", message, this);
-    }
+	// <editor-fold desc="Report Compiler Errors">
+	@Override
+	public void reportDuplicateMemberName(@Nonnull CompilerAnnotationHolder compilerAnnotationHolder) {
+		String message = String.format("Duplicate member: '%s'.", this.getName());
+		compilerAnnotationHolder.add("ERR_DUP_PRJ", message, this);
+	}
 
-    @Override
-    public void reportErrors(@Nonnull CompilerAnnotationHolder compilerAnnotationHolder) {
-        super.reportErrors(compilerAnnotationHolder);
+	@Override
+	public void reportErrors(@Nonnull CompilerAnnotationHolder compilerAnnotationHolder) {
+		super.reportErrors(compilerAnnotationHolder);
 
-        AntlrClassifier parentClassifier = this.antlrProjectionParent.getClassifier();
-        if (
-            parentClassifier == AntlrClass.NOT_FOUND
-            || parentClassifier == AntlrClass.AMBIGUOUS
-            || parentClassifier == AntlrClassifier.AMBIGUOUS
-            || parentClassifier == AntlrClassifier.NOT_FOUND
-        ) {
-            return;
-        }
+		AntlrClassifier parentClassifier = this.antlrProjectionParent.getClassifier();
+		if (
+			parentClassifier == AntlrClass.NOT_FOUND
+			|| parentClassifier == AntlrClass.AMBIGUOUS
+			|| parentClassifier == AntlrClassifier.AMBIGUOUS
+			|| parentClassifier == AntlrClassifier.NOT_FOUND
+		) {
+			return;
+		}
 
-        if (
-            this.referenceProperty == AntlrReferenceProperty.NOT_FOUND
-            || this.referenceProperty == AntlrAssociationEnd.NOT_FOUND
-            || this.referenceProperty == AntlrReferenceProperty.NOT_FOUND
-        ) {
-            AntlrDataTypeProperty<?> dataTypeProperty = parentClassifier.getDataTypePropertyByName(this.getName());
+		if (
+			this.referenceProperty == AntlrReferenceProperty.NOT_FOUND
+			|| this.referenceProperty == AntlrAssociationEnd.NOT_FOUND
+			|| this.referenceProperty == AntlrReferenceProperty.NOT_FOUND
+		) {
+			AntlrDataTypeProperty<?> dataTypeProperty = parentClassifier.getDataTypePropertyByName(this.getName());
 
-            if (dataTypeProperty == AntlrEnumerationProperty.NOT_FOUND) {
-                String message = String.format(
-                    "Cannot find member '%s.%s'.",
-                    parentClassifier.getName(),
-                    this.getName()
-                );
-                compilerAnnotationHolder.add("ERR_PRP_NFD", message, this);
-            } else {
-                String message =
-                    "Nested projection nodes require a reference property, but found a data type property '%s.%s' with type '%s'.".formatted(
-                        parentClassifier.getName(),
-                        this.getName(),
-                        dataTypeProperty.getTypeName()
-                    );
-                compilerAnnotationHolder.add("ERR_PRP_TYP", message, this);
-            }
+			if (dataTypeProperty == AntlrEnumerationProperty.NOT_FOUND) {
+				String message = String.format(
+					"Cannot find member '%s.%s'.",
+					parentClassifier.getName(),
+					this.getName()
+				);
+				compilerAnnotationHolder.add("ERR_PRP_NFD", message, this);
+			} else {
+				String message =
+					"Nested projection nodes require a reference property, but found a data type property '%s.%s' with type '%s'.".formatted(
+						parentClassifier.getName(),
+						this.getName(),
+						dataTypeProperty.getTypeName()
+					);
+				compilerAnnotationHolder.add("ERR_PRP_TYP", message, this);
+			}
 
-            return;
-        }
+			return;
+		}
 
-        if (
-            this.referenceProperty == AntlrReferenceProperty.AMBIGUOUS
-            || this.referenceProperty == AntlrAssociationEnd.AMBIGUOUS
-            || this.referenceProperty == AntlrAssociationEndSignature.AMBIGUOUS
-        ) {
-            return;
-        }
+		if (
+			this.referenceProperty == AntlrReferenceProperty.AMBIGUOUS
+			|| this.referenceProperty == AntlrAssociationEnd.AMBIGUOUS
+			|| this.referenceProperty == AntlrAssociationEndSignature.AMBIGUOUS
+		) {
+			return;
+		}
 
-        this.reportForwardReference(compilerAnnotationHolder);
+		this.reportForwardReference(compilerAnnotationHolder);
 
-        for (AntlrProjectionChild child : this.children) {
-            child.reportErrors(compilerAnnotationHolder);
-        }
-    }
+		for (AntlrProjectionChild child : this.children) {
+			child.reportErrors(compilerAnnotationHolder);
+		}
+	}
 
-    private void reportForwardReference(CompilerAnnotationHolder compilerAnnotationHolder) {
-        if (!this.isForwardReference(this.referenceProperty)) {
-            return;
-        }
+	private void reportForwardReference(CompilerAnnotationHolder compilerAnnotationHolder) {
+		if (!this.isForwardReference(this.referenceProperty)) {
+			return;
+		}
 
-        String message = String.format(
-            "Projection property '%s' is declared on line %d and has a forward reference to property '%s' which is declared later in the source file '%s' on line %d.",
-            this.getName(),
-            this.getElementContext().getStart().getLine(),
-            this.referenceProperty.getName(),
-            this.getCompilationUnit().get().getSourceName(),
-            this.referenceProperty.getElementContext().getStart().getLine()
-        );
-        compilerAnnotationHolder.add("ERR_FWD_REF", message, this, this.getElementContext().identifier());
-    }
+		String message = String.format(
+			"Projection property '%s' is declared on line %d and has a forward reference to property '%s' which is declared later in the source file '%s' on line %d.",
+			this.getName(),
+			this.getElementContext().getStart().getLine(),
+			this.referenceProperty.getName(),
+			this.getCompilationUnit().get().getSourceName(),
+			this.referenceProperty.getElementContext().getStart().getLine()
+		);
+		compilerAnnotationHolder.add("ERR_FWD_REF", message, this, this.getElementContext().identifier());
+	}
 
-    @Override
-    public void reportNameErrors(@Nonnull CompilerAnnotationHolder compilerAnnotationHolder) {
-        // Intentionally blank. Reference to a named element that gets its name checked.
-    }
+	@Override
+	public void reportNameErrors(@Nonnull CompilerAnnotationHolder compilerAnnotationHolder) {
+		// Intentionally blank. Reference to a named element that gets its name checked.
+	}
 
-    // </editor-fold>
+	// </editor-fold>
 
-    @Nonnull
-    @Override
-    protected Pattern getNamePattern() {
-        throw new UnsupportedOperationException(
-            this.getClass().getSimpleName() + ".getNamePattern() not implemented yet"
-        );
-    }
+	@Nonnull
+	@Override
+	protected Pattern getNamePattern() {
+		throw new UnsupportedOperationException(
+			this.getClass().getSimpleName() + ".getNamePattern() not implemented yet"
+		);
+	}
 }
